mise à jour des fichiers sass + responsive

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,11 +5,14 @@
 @import "./base/typography";
 @import "./components/buttons";
 @import "./components/cards";
-@import "./layouts/container";
+@import "./components/like";
+@import "./components/loading-spinner";
 @import "./layouts/functioning";
 @import "./layouts/form";
 @import "./layouts/footer";
 @import "./layouts/header";
 @import "./layouts/presentation";
+@import "./layouts/restau";
+@import "./pages/menus"
 
 
