--- a/sass/Layouts/header.scss
+++ b/sass/Layouts/header.scss
@@ -1,19 +1,34 @@
-header {
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80px;
     margin: 10px;
-}
-
-header a {
-    position: absolute;
-    top: 30px;
-    left: 40px;
-    text-decoration: none;
-    font-size: 40px;
-}
-
-.header-logo{
-    width: 280px;
+    &__link {
+        position: absolute;
+        top: 30px;
+        left: 40px;
+        text-decoration: none;
+        font-size: 40px;
+        color: black;
+    }
+    &__logo {
+        width: 280px;
+        @include tablette-only {
+            width: 430px;
+        }
+        @include desktop {
+            width: 430px;
+        }
+    }
+    @include tablette-only {
+        height: 110px;
+        display: flex;
+        align-items: baseline;
+    }
+    @include desktop {
+        height: 110px;
+        display: flex;
+        align-items: baseline;
+    }
 }
