--- a/sass/Components/cards.scss
+++ b/sass/Components/cards.scss
@@ -1,16 +1,5 @@
-.restau {
-    background-color: $extra-color;
-    padding-top: 50px;
-    & .restau-title {
-        font-size: 35px;
-        margin-left: 20px;
-        font-family: roboto;
-    }
-}
 
 .cards {
-    display: flex;
-    justify-content: center;
     width: 90%;
     margin: 50px auto;
     font-family: roboto;
@@ -20,78 +9,53 @@
     & a {
         text-decoration: none;
     }
+    @include tablette-only {
+        width: 45%;
+    }
+    @include desktop {
+        width: 42%;
+    }
 }    
 
 .cards-pic {
     width: 100%;
     height: 80%;
     position: relative;
-    
     & img {
         width: 100%;
-        height: 95%;
+        height: 360px;
         object-fit: cover;
         border-top-right-radius: 25px;
         border-top-left-radius: 25px; 
     }
-    
     & .cards-new {
         background-color: adjust-color($color: #15dea5, $hue: 0, $saturation: 0%, $lightness: 20%);
         color: green;
         font-size: 16px;
         position: absolute;
-        top: 35%;
-        right: 5%;
+        top: 110px;
+        right: 55px;
+        font-weight: bold;
+        padding: 8px 13px;
+        &__text {
+            margin: 0;
+        }
     }
 }
 
 .cards-body {
     display: flex;
     justify-content: space-between;
-    padding: 0px 33px;
-
+    padding: 15px 33px;
     & .txt {
         color: black;
         & .txt__card-title {
             font-size: 23px;
             font-weight: bold;
         }
-
         & .txt__card-localisation {
             font-size: 20px;
             padding: 5px 0px;
         }
     }
 }
-
-.heart-icon {
-    font-size: 23px;
-    & .empty-heart {
-        color: black;
-        & .heart-empty {
-            @include heart-icons;
-        }
-    }
-    & .colorized-heart {
-        height: 0px;
-        position: relative;
-        overflow: hidden;
-        width: 54px;
-        transition: height 300ms linear;
-        &  .heart-color1 {
-            @include heart-icons;
-        }
-    }
-    &:hover .colorized-heart {
-        height: 40px;
-    }
-}
-
-// .cards {
-//     height: 436px;
-// }
-
-// .cards-pic {
-//     object-fit: cover;
-//     width: 545px;
-// }
