--- a/sass/Components/buttons.scss
+++ b/sass/Components/buttons.scss
@@ -91,6 +91,7 @@
 }
 
 .btn-menu {
+    font-family: $police-txt;
     background-color: white;
     display: flex;
     align-items: center;
@@ -130,12 +131,12 @@
         transition: all 300ms;
         width: 80%;
         &__title {
-            font-size: 27px;
+            font-size: 30px;
             margin-top: 15px;
             margin-bottom: -25px;
         }
         &__descr {
-            font-size: 25px;
+            font-size: 24px;
             margin-bottom: 15px;
             white-space: nowrap;
             overflow: hidden;
@@ -186,3 +187,12 @@
         height: 110px;
     }
   }
+
+  
+  
+  
+  
+  
+  
+  
+  
