--- a/sass/Components/cards.scss
+++ b/sass/Components/cards.scss
@@ -34,9 +34,14 @@
         font-size: 16px;
         position: absolute;
         top: 110px;
-        right: 55px;
+        right: 40px;
         font-weight: bold;
         padding: 8px 13px;
+        @include mobile-only {
+            position: absolute;
+            top: 110px;
+            right: 20px;
+        }
         &__text {
             margin: 0;
         }
