--- a/sass/Components/cards.scss
+++ b/sass/Components/cards.scss
@@ -23,25 +23,23 @@
     position: relative;
     & img {
         width: 100%;
-        height: 360px;
+        height: 290px;
         object-fit: cover;
         border-top-right-radius: 25px;
-        border-top-left-radius: 25px; 
+        border-top-left-radius: 25px;
+        @include desktop {
+            height: 360px;
+        }
     }
     & .cards-new {
         background-color: adjust-color($color: #15dea5, $hue: 0, $saturation: 0%, $lightness: 20%);
         color: green;
         font-size: 16px;
         position: absolute;
-        top: 110px;
-        right: 40px;
+        top: 20px;
+        right: 25px;
         font-weight: bold;
         padding: 8px 13px;
-        @include mobile-only {
-            position: absolute;
-            top: 110px;
-            right: 20px;
-        }
         &__text {
             margin: 0;
         }
@@ -51,7 +49,7 @@
 .cards-body {
     display: flex;
     justify-content: space-between;
-    padding: 15px 33px;
+    padding: 8px 30px;
     & .txt {
         color: black;
         & .txt__card-title {
@@ -62,5 +60,8 @@
             font-size: 20px;
             padding: 5px 0px;
         }
+    }
+    @include desktop {
+        padding: 13px 20px;
     }
 }
