--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -6,17 +6,22 @@
     & .intro {
       position: relative;
       &__restau-name {
-        font-size: 27px;
+        font-size: 20px;
         font-family: "shrikhand";
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin: 15px 0px;
         position: absolute;
         bottom: 0;
         width: 100%;
         background-color: rgb(246,246,246);
         border-top-right-radius: 70px;
         border-top-left-radius: 70px;
+        & > h1 {
+          margin-right: 5px;
+        }
         @include desktop {
           flex-direction: column;
           border-radius: inherit;
@@ -68,10 +73,10 @@
       animation: meal-presentation 2000ms 500ms backwards;
     }
     &__title {
-        text-transform: uppercase;
-        font-family: $police-txt;
-        font-size: 25px;
-        margin: 15px 30px;
+      text-transform: uppercase;
+      font-family: $police-txt;
+      font-size: 20px;
+      margin: 15px 30px;
       @include tablette-only {
         text-align: center;
       }
