--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ body {
   height: 130px;
 }
 .btn-order__btn-fct:hover {
-  background-color: #ffe9f9;
+  background-color: #fff3fc;
   box-shadow: 0px 3px 20px rgb(144, 144, 144);
 }
 .btn-order__btn-fct:hover > .icons {
